--- a/scss/main.scss
+++ b/scss/main.scss
@@ -191,9 +191,9 @@ nav {
 
 .dialogWindow {
   .selectRobot {
-    max-height: 60vh;
-    display: flex;
-    flex-direction: column;
+    // max-height: 60vh;
+    // display: flex;
+    // flex-direction: column;
 
     .description {
       display: flex;
@@ -216,8 +216,8 @@ nav {
       border: solid 1px white;
       margin-top: 0.5em;
       padding: 0 0.5em;
-      overflow-y: auto;
-      max-height: 20em;
+      // overflow-y: auto;
+      // max-height: 20em;
     }
   }
 }
